updated read me

--- a/DryadInfo/readMe.tex
+++ b/DryadInfo/readMe.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx, verbatim}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{gensymb}
 % \usepackage[T1]{fontenc}
 % \usepackage[utf8]{inputenc}
 \usepackage{authblk}
@@ -71,12 +72,12 @@ The dataset archived here consists of a single tabular file. It consists of resp
   \hline
   Village name & Latitude & Longitude \\
   \hline
-  Tiend\`{e}ga & & \\
-  Tiorola & & \\
-  Fiela & & \\
-  Neguela & & \\
-  Lakaman\`{e} & & \\
-  Nioro & & \\
+  Tiend\`{e}ga & 11\degree N & 6.8\degree W \\
+  Tiorola & 11.6\degree N & 7.1\degree W \\
+  Fiela & 11.6\degree N & 7.1\degree W \\
+  Neguela & 12.9\degree N & 8.5\degree W \\
+  Lakaman\`{e} & 14.5\degree N & 9.9\degree W\\
+  Nioro & 15.3\degree N & 9.5\degree W \\
   \hline
 \end{tabular}
 
